modified:   index.html

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <div class="chart1" id="c1"></div>
       <p class="center"> Then which kind of movies that leonardo has starred in? </p>
       <div class="chart2" id="c2"></div>
-      <p> Finally, let's review the timeline of Leonardo </p>
+      <p class="center">   <br/> Finally, let's review the timeline of Leonardo </p>
       <div id='timeline-embed' style="width: 100%; height: 600px"></div>
     </div>
 
